tests/controller/snapshots/cors_[with_max_age]@middlewares.snap
---
source: tests/controller/middlewares.rs
expression: "(format!(\"access-control-allow-origin: {:?}\",\n        res.headers().get(\"access-control-allow-origin\")),\n    format!(\"vary: {:?}\", res.headers().get(\"vary\")),\n    format!(\"access-control-allow-methods: {:?}\",\n        res.headers().get(\"access-control-allow-methods\")),\n    format!(\"access-control-allow-headers: {:?}\",\n        res.headers().get(\"access-control-allow-headers\")),\n    format!(\"allow: {:?}\", res.headers().get(\"allow\")))"
---
(
    "access-control-allow-origin: Some(\"*\")",
    "vary: Some(\"origin, access-control-request-method, access-control-request-headers\")",
    "access-control-allow-methods: Some(\"*\")",
    "access-control-allow-headers: Some(\"*\")",
    "allow: Some(\"GET,HEAD,POST\")",
)
