tests/controller/snapshots/panic@middlewares.snap
---
source: tests/controller/middlewares.rs
expression: "(res.status().to_string(), res.text().await)"
---
(
    "500 Internal Server Error",
    Ok(
        "{\"error\":\"Internal Server Error\"}",
    ),
)
