tests/controller/snapshots/secure_headers_[none]_overrides[none]@middlewares.snap
---
source: tests/controller/middlewares.rs
expression: policy
---
Some(
    "default-src 'self' https:; font-src 'self' https: data:; img-src 'self' https: data:; object-src 'none'; script-src https:; style-src 'self' https: 'unsafe-inline'",
)
